# tiny-mm-gpt

./: .gitignore  README.md  main.py  pyproject.toml
tokenizers/: mini.py
tokenizers/test/: test_mini.py
tools/: coco.py
