[project]
name = "tiny-mm-gpt"
version = "0.1.0"
description = "Tiny Multi-Modal GPT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0",
    "pillow>=11.3.0",
    "regex>=2024.11.6",
    "rich>=14.0.0",
    "torchvision>=0.22.1",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
 "pyright>=1.1.402",
 "pytest>=8.4.1",
 "ruff>=0.12.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
